--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.3.2",
-	"appid": "wx0cfd1e0a666254a4",
+	"appid": "wx9d51a10a38440d15",
 	"projectname": "shaolin",
 	"debugOptions": {
 		"hidedInDevtools": []
